# data-feature-engineering-service

./: Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
app/: cache.py  config.py  features.py  kafka_io.py  main.py  repository.py  service.py
