[project]
name = "feature-service"
version = "0.1.0"
description = "Feature engineering service for market candles"
requires-python = ">=3.11"
dependencies = [
    "aiokafka[zstd]>=0.11.0",
    "asyncpg>=0.29.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20",
    "python-logging-loki>=0.3",
]

[project.scripts]
serve = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]